<resources>
    <string name="app_name">ToDoListNew</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="whattodo">Что надо сделать...</string>
    <string name="sava">Сохранить</string>
    <string name="important">Важность</string>
    <string name="no">Нет</string>
    <string name="delete">Удалить</string>
    <string name="text_recycle">Дело...</string>
</resources>