<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondFragment">

    <!--    <TextView-->
    <!--        android:id="@+id/textview_second"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        app:layout_constraintBottom_toTopOf="@id/button_second"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toTopOf="parent" />-->


    <!--    <EditText-->
    <!--        android:id="@+id/titleInput"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_margin="@dimen/fab_margin"-->
    <!--        android:hint="Что надо сделать"-->
    <!--        android:backgroundTint="@color/md_theme_light_primaryContainer"-->
    <!--        android:padding="@dimen/fab_margin"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toBottomOf="@+id/button_second" />-->

    <EditText
        android:id="@+id/titleInput"
        android:layout_width="match_parent"
        android:layout_height="104dp"
        android:background="@drawable/rounded_corner"
        android:gravity="top"
        android:hint="@string/whattodo"
        android:padding="@dimen/fab_margin"
        android:layout_margin="@dimen/fab_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_second" />

    <TextView
        android:id="@+id/SaveButton"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_marginEnd="22dp"
        android:layout_marginTop="28dp"
        android:text="@string/sava"
        android:textSize="14sp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <LinearLayout
        android:id="@+id/customButtonLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        android:padding="16dp"
        app:layout_constraintTop_toBottomOf="@+id/titleInput">

        <TextView
            android:layout_width="75dp"
            android:layout_height="19dp"
            android:text="@string/important" />

        <TextView
            android:textColor="#4D000000"
            android:id="@+id/text_priority"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no" />
    </LinearLayout>


    <TextView
        android:id="@+id/deleteButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete"
        app:layout_constraintStart_toEndOf="@id/binIcon"
        app:layout_constraintTop_toBottomOf="@+id/customButtonLayout"


        />

    <ImageView
        android:id="@+id/binIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/bin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/deleteButton"
        app:layout_constraintTop_toTopOf="@id/deleteButton"
        android:paddingStart="16dp"
        android:paddingEnd="10dp"
        app:layout_constraintTop_toBottomOf="@+id/customButtonLayout"


        />



    <ImageView
        android:id="@+id/button_second"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginStart="22dp"
        android:layout_marginTop="28dp"
        android:src="@drawable/sharp_close_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />



</androidx.constraintlayout.widget.ConstraintLayout>